ver 0.21 (not yet released)
* protocol
  - "tagtypes" can be used to hide tags
  - "find" and "search" can sort
* tags
  - new tag "OriginalDate"
* output
  - alsa: non-blocking mode

ver 0.20.7 (not yet released)
* database
  - simple: fix false positive directory loop detection with NFS

ver 0.20.6 (2017/03/10)
* input
  - curl: fix headers after HTTP redirect to Shoutcast server
* decoder
  - ffmpeg: re-enable as fallback
  - mpcdec: fix crash (division by zero) after seeking
  - sidplay: make compatible with libsidplayfp < 1.8
* fix stream tags after automatic song change
* workaround for GCC 4.9.4 / libstdc++ bug (build failure)

ver 0.20.5 (2017/02/20)
* tags
  - id3: fix memory leak on corrupt ID3 tags
* decoder
  - sidplay: don't require libsidutils when building with libsidplayfp
* output
  - httpd: fix two buffer overflows in IcyMetaData length calculation
* mixer
  - alsa: fix crash bug

ver 0.20.4 (2017/02/01)
* input
  - nfs: fix freeze after reconnect
* output
  - sndio: work around a libroar C++ incompatibility
* workaround for GCC 4.9 "constexpr" bug
* fix FreeBSD build failure

ver 0.20.3 (2017/01/25)
* protocol
  - "playlistadd" creates new playlist if it does not exist, as documented
* database
  - proxy: fix error "terminate called after throwing ..."
  - proxy: make connect errors during startup non-fatal
* neighbor
  - upnp: fix premature expiry
* replay gain: don't reset ReplayGain levels when unpausing playback
* silence surround channels when converting from stereo
* use shortcuts such as "dsd64" in log messages

ver 0.20.2 (2017/01/15)
* input
  - alsa: fix crash bug
  - alsa: fix buffer overruns
* decoder
  - flac: add options "probesize" and "analyzeduration"
* resampler
  - libsamplerate: reset state after seeking
* output
  - fix static noise after changing to a different audio format
  - alsa: fix the DSD_U32 sample rate
  - alsa: fix the DSD_U32 byte order
  - alsa: support DSD_U16