@@ -4,6 +4,8 @@ ver 0.21 (not yet released)
   - "find" and "search" can sort
 * tags
   - new tag "OriginalDate"
+* decoder
+  - pcm: support audio/L24 (RFC 3190)
 * output
   - alsa: non-blocking mode
 
